# maze

./: .gitignore  AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_GRAMMAR_IMPLEMENTATION.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_AND_TESTING_COMPLETE.md  FINAL_STATUS.md  LICENSE  P0_COMPLETION_SUMMARY.md  P1_RUST_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  README.md  README_fixed.md  REPOSITORY_STATUS.md  TEST_RESULTS_SUMMARY.md  coverage.json  pyproject.toml  zensical.toml
.archive/: COMPREHENSIVE_STATUS.md  PATH_AB_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md
.beads/: beads.left.jsonl  beads.left.meta.json
.github/: QUICK_REFERENCE.md
.github/workflows/: deploy-pages.yml  docs.yml  quality.yml  test.yml
.maze/: config.toml
benchmarks/: __init__.py  validation_benchmark.py
benchmarks/humaneval/: results.json  runner.py
benchmarks/phase6/: REPORT.md  __init__.py  results.json  run_benchmarks.py
benchmarks/validation/: VALIDATION_REPORT.md  run_with_api_key.py  test_api_key_security.py
deployment/: DEPLOYMENT_CHECKLIST.md  LESSONS_LEARNED.md  modal-deployment-plan.md
deployment/modal/: CONSTRAINT_ENFORCEMENT_ISSUE.md  CONSTRAINT_ENFORCEMENT_PLAN.md  CURRENT_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE3_ROOT_CAUSE_IDENTIFIED.md  README.md  ROOT_CAUSE_AND_SOLUTION.md  VALIDATION_RESULTS.md  VERIFIED_IMPLEMENTATION.md  debug_grammar.py  live_test_results.json  minimal_v1_test.py  modal_app.py  simple_test.py  test_live_deployment.py  test_structured_outputs.py
deployment/modal/scripts/: deploy.sh  stop.sh  test_deployment.sh
docs/: DIAGRAM_REGENERATION.md  GRAMMAR_CONSTRAINTS.md  architecture.md  index.html  index.md  phase6-full-spec.md  phase6-plan.md  phase6-spec.md  script.js  styles.css  whitepaper.html  whitepaper.md
docs/api-reference/: README.md
docs/css/: maze-theme.css  styles.css
docs/js/: sidebar.js  theme.js
docs/user-guide/: best-practices.md  core-concepts.md  getting-started.md  provider-setup.md  python-guide.md  rust-guide.md
docs/whitepaper/: validation-manifest.md  whitepaper.md
docs/whitepaper/diagrams/: 02-constraint-hierarchy.d2  02-constraints-dark.d2  03-type-inhabitation.d2  05-performance-comparison.d2  06-roadmap-light.d2
examples/: README.md
examples/advanced/: 01-api-generation.py  02-code-refactoring.py  03-test-generation.py
examples/go/: 01-function-error.py  02-struct-methods.py  03-interface.py  04-goroutines.py  05-test-generation.py
examples/integration/: 01-github-bot.py  02-ci-pipeline.py
examples/python/: 01-function-generation.py  02-dataclass.py  03-async-function.py  04-fastapi-endpoint.py  05-test-generation.py
examples/rust/: 01-function-result.py  02-struct-trait.py  03-async-tokio.py  04-error-handling.py  05-test-generation.py
examples/typescript/: 01-function-generation.py  02-class-generation.py  03-interface-generation.py  04-api-endpoint.py  05-type-safe-refactor.py
examples/zig/: 04-example.py
integrations/: __init__.py
integrations/rune/: __init__.py
scripts/: build-docs.py
site/: 404.html  generate-assets.py  index.html  search.json  sitemap.xml  whitepaper.html
site/DIAGRAM_REGENERATION/: index.html
site/architecture/: index.html
site/css/: green.css  styles.css
site/javascripts/: theme.js
site/js/: sidebar.js  theme.js
site/whitepaper/: index.html  regenerate-diagrams.sh
site/whitepaper/diagrams/: 01-pipeline-dark.d2  01-pipeline-light.d2  01-pipeline.d2  02-constraints-light.d2  03-type-dark.d2  03-type-light.d2  04-integration-ecosystem.d2  04-integrations-dark.d2  04-integrations-light.d2  06-roadmap-dark.d2  06-roadmap.d2
site/whitepaper/validation-manifest/: index.html
specs/: p0-todos-spec.md  p1-rust-full-spec.md  p1-rust-spec.md  p2-go-spec.md  path-a-plan.md  path-a-spec.md  path-b-full-spec.md  path-b-plan.md  path-b-spec.md  phase3-full-spec.md  phase3-plan.md  phase3-spec.md  phase4-full-spec.md  phase4-plan.md  phase4-spec.md  phase5-full-spec.md  phase5-plan.md  phase5-spec.md  post-phase6-roadmap.md
src/maze/: __init__.py  __main__.py  config.py  logging.py
src/maze/cli/: base.py  (+3 more)
templates/: base.html  index.html
tests/: conftest.py
tests/e2e/: test_path_a_integration.py  test_phase6.py
tests/integration/: test_learning_integration.py  test_type_system_integration.py  test_validation_integration.py
tests/unit/: test_config.py  test_logging.py
tests/validation/: VALIDATION_RESULTS.md  test_constraint_enforcement.py  test_suite_comprehensive.py
validation/: __init__.py
(+116 files in other folders)
