[project]
name = "maze"
version = "0.1.0"
description = "Adaptive constrained code generation system with LLM integration"
readme = "README.md"
authors = [
    { name = "Rand Arete", email = "rand.arete@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core constraint engine
    "llguidance>=0.1.0",
    # LLM providers
    "guidance>=0.1.14",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    # Type systems
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    # AST parsing
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-typescript>=0.20.4",
    "tree-sitter-rust>=0.20.4",
    "tree-sitter-go>=0.20.4",
    # JSON Schema
    "jsonschema>=4.21.0",
    "pydantic>=2.6.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "msgpack>=1.0.7",
    "xxhash>=3.4.1",
    # Performance
    "orjson>=3.9.13",
    "lz4>=4.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
]

vllm = [
    "vllm>=0.3.0",
]

sglang = [
    "sglang>=0.1.0",
]

llamacpp = [
    "llama-cpp-python>=0.2.55",
]

[project.scripts]
maze = "maze.api.cli:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
