[project]
name = "maze"
version = "0.1.0"
description = "Adaptive constrained code generation system with LLM integration"
readme = "README.md"
authors = [
    { name = "Rand Arete", email = "rand.arete@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core constraint engine
    "llguidance>=0.1.0",
    # LLM providers
    "guidance>=0.1.14",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    # Type systems
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    # AST parsing
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-typescript>=0.20.4",
    "tree-sitter-rust>=0.20.4",
    "tree-sitter-go>=0.20.4",
    # JSON Schema
    "jsonschema>=4.21.0",
    "pydantic>=2.6.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "msgpack>=1.0.7",
    "xxhash>=3.4.1",
    # Performance
    "orjson>=3.9.13",
    "lz4>=4.3.3",
    "tree-sitter-javascript>=0.25.0",
    "zensical>=0.0.5",
    "tomli-w>=1.2.0",
    "tree-sitter-zig>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
]

vllm = [
    "vllm>=0.3.0",
]

sglang = [
    "sglang>=0.1.0",
]

llamacpp = [
    "llama-cpp-python>=0.2.55",
]

[project.scripts]
maze = "maze.cli.main:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["B011"]  # assert False

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks performance benchmark tests",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src/maze"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
